# FastAPI_learning

./: .gitignore  README.md  async_stress_testing.py  cors.py  errors_handling.py  file_handling.py  main.py  many_models.py  middleware.py  path_configuring.py  pyproject.toml  stress_testing.py  webcam.html
advanced/: additional_responses.py  async_db_sqlalchemy.py  basic_auth.py  cookies.py  dependencies.py  direct_request.py  direct_response.py  headers.py  including_wsgi.py  middleware.py  path_fun.py  websockets.py
bigger_applicatation_example/: auth.py  dependencies.py  main.py
bigger_applicatation_example/internal/: admin.py
bigger_applicatation_example/tests/: base_test_class.py  test_main.py
bigger_application_example/: auth.py  main.py
bigger_application_example/internal/: admin.py
bigger_application_example/routers/: files.py
bigger_application_example/tests/: base_test_class.py  test_admin.py  test_main.py
dependencies/: class_dependencies.py  func_dependencies.py  global_dependencies.py  list_dependecies.py
peewee_db_example/: database.py  main.py
security/: jwt.py  user_and_password.py
sql_alchemy_example/: database.py  main.py  schemas.py
stress_testing/: async_stress_testing.py  stress_testing.py
