[tool.poetry]
name = "fastapi_learning"
version = "0.1.0"
description = "FastAPI Learning"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
loguru = "^0.6.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
SQLAlchemy = "^1.4.35"
pytest = "^7.1.2"
requests = "^2.27.1"
coverage = "^6.3.2"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
